--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 
     <div class="container" style="margin-top: 100px;">
         <div class="row">
-            <div class="col-md-6 m-auto">
+            <div id="parent" class="col-md-6 m-auto">
                 <!-- <div class="form-group">
                     <label for="upload_filename">Click to upload a file</label>
                     <input type="file" name="file" id="file" class="form-control-file">
@@ -66,6 +66,9 @@
                     </div>
                     <input id="btnSubmit" type="submit" value="Submit" class="btn btn-primary btn-block">
                 </form>
+                <div id="images">
+
+                </div>
             </div>
         </div>
     </div>
