--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
                                 </div>
                                 <div class="form-group">
                                     <input id="passwordInput" placeholder="Password" class="form-control form-control-sm" type="text" required="">
+                                    <small>Password must be at  least 8 characters long</small>
                                 </div>
                                 <div class="form-group">
                                     <button id="btn-login" type="submit" class="btn btn-primary btn-block">Login</button>
